c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/scalar_required/compare_structs.c
struct s {
    int a;
};

int main(void) {
    struct s x = {1};
    struct s y = {2};
    return x == y; // can only apply == operator to scalars, not structures
}